--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@commitlint/config-angular": "^8.0.0",
     "ava": "^2.1.0",
     "conventional-changelog": "^3.1.8",
+    "conventional-changelog-cli": "^2.0.31",
     "conventional-changelog-lint": "^2.1.1",
     "husky": "^3.0.0",
     "mversion": "^1.10.1",
